# LiteBIRD-inclination-analysis

./: .gitignore  LICENSE  README.md  logger.py  main.py  models.py  pyproject.toml  requirements.txt
LiteBIRD-inclination-analysis/: .main.py.swp  clean_maps.sh  data_parser.py  data_parser2.py  database.py  functions.py  main.py  map_pixels_reader.py  models.py  parameters.toml  settings.py  simulations.db  tempfile.toml
LiteBIRD-inclination-analysis/db/: final_simulations2.db  final_simulations2.db-journal
LiteBIRD-inclination-analysis/db_backup/: final_simulations.db  simulations.db
LiteBIRD-inclination-analysis/notebooks/: data_analysis.ipynb  radius_vs_time.ipynb
LiteBIRD-inclination-analysis/notebooks/.ipynb_checkpoints/: data_analysis-checkpoint.ipynb  pixel_maps-checkpoint.ipynb  radius_vs_time-checkpoint.ipynb
LiteBIRD-inclination-analysis/results/: report.html  report.md  tempfile.toml
LiteBIRD-inclination-analysis/sed_files/: neptune_hf2.csv  neptune_hf3.csv  uranus_hf2.csv  uranus_hf3.csv
extra/: report.html  report.md
litebird-scanning-strategy/: observation_time_table.txt  parameters.json
results/: report.html  report.md  tempfile.toml  uranus_sed_ghz_k.csv
sed_files/: neptune_sed_ghz_k.csv  plotdigitizer_csv_parser.py
